2005-11-18 Magnus Hagdorn
 * added AUTHORS

2005-11-18 Magnus Hagdorn
 * started ChangeLog
 * added automake support