@@ -4,12 +4,15 @@ endif
 if DO_DOC_PS
  ps_doc = glimmer.ps
 endif
+if HAVE_PYCF
+ pycf_dir = tg
+endif
 doc_DATA = $(ps_doc) $(pdf_doc)
 docdir = $(prefix)/doc
 dist_doc_DATA = $(doc_DATA)
-SUBDIRS = dg ug num common
+SUBDIRS = dg ug num common $(pycf_dir)
 
-EXTRA_DIST = dg.tex dg_pdf.tex dg_ps.tex glimmer.tex glimmer_pdf.tex glimmer_ps.tex num.tex num_pdf.tex num_ps.tex ug.tex ug_pdf.tex ug_ps.tex 
+EXTRA_DIST = dg.tex dg_pdf.tex dg_ps.tex glimmer.tex glimmer_pdf.tex glimmer_ps.tex num.tex num_pdf.tex num_ps.tex ug.tex ug_pdf.tex ug_ps.tex tg_pdf.tex  tg_ps.tex   tg.tex
 
 CLEANFILES = *~ *.aux *.dvi *.log *.out *.toc *.bbl *blg *.html \
              glimmer_html.4ct  glimmer_html.4tc  glimmer_html.css  glimmer_html.idv  \
