@@ -44,7 +44,7 @@ The model can be run with horizontal periodic boundary conditions, i.e. the west
 
 These boundary conditions are enforced by exchanging points for the temperature and vertical velocity calculations. The ice thicknesses are calculated explicitly at the ghostpoints.
 
-\subsubsection{$\sigma$--Coordinate System}
+\subsubsection{$\sigma$--Coordinate System}\label{num.sec.sigma}
 The vertical coordinate, $z$, is scaled by the ice thickness analogous to the $s$--coordinate in numerical weather simulations \citep[e.g.][]{Holton1992}. A new vertical coordinate, $\sigma$, is introduced so that the ice surface is at $\sigma=0$ and the ice base at $\sigma=1$ (see Fig. \ref{kin.fig.scale}, i.e.
 \begin{equation}
   \label{kin.eq.vertical_scale}
