@@ -1,0 +1,2 @@
+SUBDIRS = figures
+EXTRA_DIST = tg.tex installation.tex plotcfvar.tex plotextent.tex plotprofile.tex
