@@ -1,6 +1,4 @@
-\section{GMT Visualisation Tools}
-There are many tools for visualising netCDF files. In particular \href{http://meteora.ucsd.edu/~pierce/ncview\_home\_page.html}{\texttt{ncview}} and \href{http://www.epic.noaa.gov/java/ncBrowse/}{\texttt{ncBrowse}} are usefule viewers. We also provide a number of Python programs and classes using \href{http://gmt.soest.hawaii.edu/}{GMT} which produce postscript images of the GLIMMER netCDF files.
-
+\section{Installation}
 The visualisation tools are based on GMT programs written in Python. In order to be able to use these it is necessary to have a few extra packages:
 \begin{itemize}
 \item \href{http://www.pfdubois.com/numpy/}{{\bf Numerical Python}}: Numerical Python extends python to be able to work on gridded data.
