@@ -1,0 +1,6 @@
+\section{Using \texttt{plot\_extent.py}}
+\texttt{plot\_extent.py} plots the ice extent at a given time. This program is particularly useful to compare different runs. \texttt{plot\_extent.py} can also plot profile lines using \texttt{-p} switch like \texttt{plotCFvar.py}.
+
+\begin{pycf}{plot\_extent.py -t -17 fenscan.nc fenscan-gthf.nc extent.ps}{\dir/figures/extent.eps}
+plots the ice extent of simulations stored in \texttt{fenscan.nc} and \texttt{fenscan-gthf.nc} at time -17ka.
+\end{pycf}
