@@ -1,0 +1,18 @@
+There are many tools for visualising netCDF files. In particular \href{http://meteora.ucsd.edu/~pierce/ncview\_home\_page.html}{\texttt{ncview}} and \href{http://www.epic.noaa.gov/java/ncBrowse/}{\texttt{ncBrowse}} are usefule viewers. We also provide a number of Python programs and classes using \href{http://gmt.soest.hawaii.edu/}{GMT} which produce postscript images of the GLIMMER netCDF files.
+
+This chapter provides a brief manual and a cookbook of how to use the PyCF tools. 
+
+\input{\dir/installation.tex}
+
+\section{General Remarks}
+All PyCF tools share some of the options. You can select a variable to be processed with the \texttt{-v} switch. A time slice is selected using the \texttt{-t} or \texttt{-T} switch. The difference between the two switches is that you select a time (in ka) with the \texttt{-t} switch and a time slice (a number starting at 0) with the \texttt{-T} switch. You can also use negative numbers for the \texttt{-T} switch to start counting at the end, e.g. \texttt{-T-1} selects the last time slice.
+
+For some plots you can select more than one variable or time or use a number of input files. You can change the width of a plot with the \texttt{--width} switch. This is particularly useful if you are plotting more than one variable/time/file with \texttt{plotCFvar.py}.
+
+All PyCF tools produce postscript files. You can send these files straight to a postscript printer. If you want to include images in a {\LaTeX} document you need to convert them to an encapsulated postscript file. \texttt{ps2epsi} is such a utility and is used for the examples shown here. You can also use \texttt{convert} which is part of \href{http://www.imagemagick.org/script/index.php}{ImageMagick} to convert the resulting postscript files to any other graphics format such as \texttt{PNG}.
+
+You can always use the switch \texttt{-h} or \texttt{--help} to get some documentation of the switches. Some of the options have no effect or do not behave as you would expect. Please expirment with the tools and report bugs and make suggestions for improvement. 
+
+\input{\dir/plotcfvar.tex}
+\input{\dir/plotextent.tex}
+\input{\dir/plotprofile.tex}
