@@ -4,4 +4,3 @@
 \input{\dir/drivers.tex}
 \input{\dir/glint.tex}
 \input{\dir/mbals.tex}
-\input{\dir/visualisation.tex}
